# secdev

./: .gitignore  .pre-commit-config.yaml  DV.md  Dockerfile  compose.deploy.yaml  compose.yaml  feature_votes.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/: README.md
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: sast_summary.md  semgrep.sarif
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json  summary.md  trivy_report.json
app/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  routers.py  schemas.py
iac/: deployment.yaml  secret.yaml  service.yaml
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml
security/semgrep/: rules.yml
tests/: conftest.py  test_errors.py
