[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secdev-app"
version = "0.1.0"
description = "SecDev Course Template - FastAPI application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.112.2",
    "uvicorn==0.30.5",
    "sqlalchemy==2.0.35",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.4.0",
    "bcrypt==4.0.1",
    "python-multipart==0.0.18",
    "email-validator==2.1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.ruff.lint]
select = ["E","F","W","I"]
[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/**"]
